[package]
name = "sorted"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.98", features = ["extra-traits", "full"] }

[dev-dependencies]
trybuild = "1.0.103"
